--- a/main.css
+++ b/main.css
@@ -1,23 +1,70 @@
 @font-face {
   font-family: "kjv";
-  src:  url("/KJV1611.woff2") format("woff2")   ;
+  src:  url("/KJV1611.woff2") format("woff2");
   unicode-range: U+000-5FF;
 }
+
 @font-face {
-  font-family: "EB Garamond";
-  src:  url("/EBGaramond.woff2") format("woff2")   ;
-  unicode-range: U+000-5FF;
+    font-family: 'EB Garamond';
+    src: url('EBGaramondF.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
 }
 
 body {
 	font-family: "EB Garamond",Garamond, Georgia;
 	background-color: #ffffea;
+	padding-left: 5vw;
+	padding-right:5vw;
+}
+
+.container{
+	display: grid;grid-template-areas:
+	"header header header"
+	"sidebar content sidebar2";
+	grid-template-columns: 0.5fr 3fr 0.5fr;
+	grid-auto-rows: 0.5fr 3fr;"
+	width:100vw;
+}
+header{
+	grid-area: header;
+	
+}
+aside{
+	font-size: 24px;
+	color: #722f37;
+	margin: auto;
+}
+aside .flechaDer{
+  grid-area: sidebar;
+}
+aside .flechaIzq{
+  grid-area: sidebar2;
+}
+aside a
+{
+	text-decoration:none;
+	cursor: pointer;
+	user-select : none;
+	-webkit-user-select: none;
+	padding-top:10vh;
+	padding-right: 2ch;
+	padding-left: 2ch;
+}
+
+.flechaIzq a:focus,
+.flechaDer a:focus{
+	border: 2px solid #722f37;
+	outline:none;
 }
 #main {
 	padding-top: 2ch;
 	text-align: center;
 }
+
 h1 {
+	cursor: pointer;
 	margin-bottom: 0;
 	color: #722f37;
 	font-family: "kjv";
@@ -36,55 +83,30 @@ hr{
 a:visited{
 	color: #722f37;
 }
-.centro{
+article{
 	font-size: 16px; 
 	text-align: center;
 	line-height: 1.5;
-	height: 70vh;
-	width: 80vw;
 }
-.centro a{
+article a{
 	font-size: 24px;
 	font-weight: bold;
 	color: #722f37;
+}
+article .dias{
+	line-height: 1;
+	font-size: 16px;
+	margin:0px;	
+	color:#4B5267;
 }
 a:focus {
 	border: 2px solid #722f37;
 	padding:0.5px;
 	outline:none;
 }
-.centro .dias{
-	line-height: 1;
-	font-size: 16px;
-	margin:0px;	
-	color:#4B5267;
-}
+
 .texto{
 	color:#4B5267;
-}
-.flecha{
-	font-size: 24px; 
-	text-align: center;
-	color: #722f37;
-	padding-right:2ch;
-	padding-left:2ch;
-	width: 10vw;
-}
-#flechaDer{
-	text-decoration:none;
-	cursor: pointer;
-	user-select : none;
-	-webkit-user-select: none;
-}
-#flechaIzq{
-	text-decoration:none;
-	cursor: pointer;
-	user-select : none;
-	-webkit-user-select: none;
-}
-.flecha a:focus{
-	border: 2px solid #722f37;
-	outline:none;
 }
 .cruz{
 	text-align: center;
