Variables css para colores

--- a/main.css
+++ b/main.css
@@ -1,3 +1,8 @@
+:root {
+	--backColor: #ffffea;
+	--frontColor: #722f37;
+	--textColor: #4B5267;
+}
 @font-face {
 	font-family: "kjv";
 	src:  url("/KJV1611.woff2") format("woff2");
@@ -12,7 +17,7 @@
 }
 body {
 	font-family: "EB Garamond",Garamond, Georgia;
-	background-color: #ffffea;
+	background-color: var(--backColor);
 	padding-left: 5vw;
 	padding-right:5vw;
 }
@@ -29,7 +34,7 @@ header{
 }
 aside{
 	font-size: 24px;
-	color: #722f37;
+	color: var(--frontColor);
 	margin: auto;
 }
 aside .flechaDer{
@@ -50,7 +55,7 @@ aside a
 }
 .flechaIzq a:focus,
 .flechaDer a:focus{
-	border: 2px solid #722f37;
+	border: 2px solid var(--frontColor);
 	outline:none;
 }
 #main {
@@ -60,22 +65,22 @@ aside a
 h1 {
 	cursor: pointer;
 	margin-bottom: 0;
-	color: #722f37;
+	color: var(--frontColor);
 	font-family: "kjv";
 	font-weight: normal;
 }
 h2 {
 	text-align: center;
-	color: #722f37;
+	color: var(--frontColor);
 	font-size: 24px;
 	line-height: 1.2;
 }
 hr{
-	color:#722f37;
-	border-color:#722f37;
+	color:var(--frontColor);
+	border-color:var(--frontColor);
 }
 a:visited{
-	color: #722f37;
+	color: var(--frontColor);
 }
 article{
 	font-size: 16px; 
@@ -85,25 +90,25 @@ article{
 article a{
 	font-size: 24px;
 	font-weight: bold;
-	color: #722f37;
+	color: var(--frontColor);
 }
 article .dias{
 	line-height: 1;
 	font-size: 16px;
 	margin:0px;	
-	color:#4B5267;
+	color:var(--textColor);
 }
 a:focus {
-	border: 2px solid #722f37;
+	border: 2px solid var(--frontColor);
 	padding:0.5px;
 	outline:none;
 }
 .texto{
-	color:#4B5267;
+	color:var(--textColor);
 }
 .cruz{
 	text-align: center;
 	font-size: 2rem;
-	color: #722f37;
+	color: var(--frontColor);
 	font-weight: normal;
 }
