--- a/main.css
+++ b/main.css
@@ -29,6 +29,7 @@ body {
 	grid-template-columns: 0.5fr 3fr 0.5fr;
 	grid-auto-rows: 0.5fr 3fr;"
 	width: 100vw;
+    align-items: center;
 }
 header{
 	grid-area: header;
@@ -36,7 +37,6 @@ header{
 aside{
 	font-size: 24px;
 	color: var(--frontColor);
-	margin: auto;
 }
 aside .flechaDer{
 	grid-area: sidebar;
